# DataStructs

./: CMakeLists.txt  all.sh  configure.sh  main.cpp  run.sh
include/: array.h  common.h  shared_ptr.h  unique_ptr.h
src/: CMakeLists.txt  array.cpp  shared_ptr.cpp  unique_ptr.cpp
test/: CMakeLists.txt  array_test.cpp  smart_ptr_test.cpp
